--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "pragmarx/google2fa": "^3.0"
+        "pragmarx/google2fa": "^3.0",
         "webklex/laravel-imap": "1.0.5.3"
     },
     "require-dev": {
