--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: required
-dist: trusty
 language: php
+dist: trusty
 
 php:
   - 7.1
@@ -16,16 +16,14 @@ addons:
       - mysql-common
       - mysql-community-server
   chrome: stable
-  
+
 before_script:
   - cp .env.travis .env
+  - travis_retry composer install --no-interaction
   - mysql -e 'CREATE DATABASE openhelpdesk_test;'
-  - composer self-update
-  - composer install --no-interaction
-  - php artisan key:generate
   - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
-  - php artisan serve &
+  - php artisan key:generate
+  - php artisan serve > /dev/null 2>&1 &
 
 script:
-  # - vendor/bin/phpunit
   - php artisan dusk
