TicketHelper class, and some testing to use both Laravel Dusk and PHPUnit #34

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,6 +9,7 @@ public/ @thyone
 # Models
 app/Models @pimoudeveldhuis
 database/ @pimoudeveldhuis
+tests/ @pimoudeveldhuis
 
 # Logic
 app/Http @Aurolieen
